test_programs/compile_failure/unsigned_integer_literal_overflow/src/main.nr
fn main() {
    foo(256)
}

fn foo(_x: u8) {}
